20240720-180204：跟随哲豆更新。

--- a/rime/zzdyx_mod.dict.yaml
+++ b/rime/zzdyx_mod.dict.yaml
@@ -692,8 +692,8 @@ CPU	cpu
 暗伤	arsj
 奥斯卡	arsk
 奥斯陆	arsl
-奥数	arsm
 暗杀	arsm
+奥数	arsm
 奥斯曼	arsm
 暗室	arsn
 奥赛	arsn
@@ -4387,7 +4387,7 @@ bilibili	blbl
 焙烤	bmkm
 半空	bmkn
 半颗	bmko
-八块	bmku
+爆款	bmku
 憋	bml
 并列	bmla
 爆裂	bmla
@@ -6380,6 +6380,7 @@ bilibili	blbl
 步步高	bybg
 北部	bybh
 不愠不火	bybh
+钵钵鸡	bybj
 不远不近	bybj
 步兵旅	bybl
 彪炳	bybm
@@ -7163,7 +7164,7 @@ bilibili	blbl
 成箱	caxt
 存续	caxx
 磁效应	caxy
-存有	caya
+成渝	cayd
 厨艺	caye
 成员国	cayg
 成瘾	cayh
@@ -12834,8 +12835,8 @@ bilibili	blbl
 触须	cwxq
 臭味相投	cwxt
 猜一猜	cwyc
-从未有过	cwyg
 处于	cwyg
+从未有过	cwyg
 处以	cwyl
 财务预算	cwys
 猜疑	cwyw
@@ -13742,6 +13743,7 @@ bilibili	blbl
 大盘股	dapg
 大排行	daph
 大碰撞	dapi
+大盘鸡	dapj
 大批	dapk
 大批量	dapl
 大炮	dapm
@@ -13798,6 +13800,7 @@ bilibili	blbl
 大寿	dasg
 大傻子	dasi
 大使	dasj
+大数据	dasj
 大势	dask
 大神	dasl
 大受	dasm
@@ -22466,9 +22469,11 @@ bilibili	blbl
 分不清	fmbq
 翻版	fmbr
 粉白	fmbr
+分包商	fmbs
 分布图	fmbt
 粉笔	fmbt
 分不清	fmbu
+分包	fmbw
 粉饼	fmbw
 父辈	fmby
 翻白眼	fmby
@@ -22685,6 +22690,7 @@ bilibili	blbl
 粪青	fmqg
 父亲	fmqh
 斧	fmqi
+番茄酱	fmqj
 烦请	fmql
 分区	fmqs
 翻墙	fmqu
@@ -22742,6 +22748,7 @@ bilibili	blbl
 分期	fmuf
 粪青	fmug
 父亲	fmuh
+番茄酱	fmuj
 烦请	fmul
 分区	fmus
 翻墙	fmuu
@@ -23242,6 +23249,7 @@ bilibili	blbl
 蜂鸣器	fomq
 蜂鸣器	fomu
 蜉	fomv
+赋能	fonl
 蜂鸟	fonw
 赗	fooo
 贩	foq
@@ -25628,8 +25636,8 @@ bilibili	blbl
 攻城掠地	gcld
 攻城略地	gcld
 格勒	gclf
-干柴烈火	gclh
 概率	gclh
+干柴烈火	gclh
 橄榄枝	gcli
 根瘤菌	gclj
 格拉	gclk
@@ -27981,10 +27989,10 @@ bilibili	blbl
 公立	gmlh
 公路	gmli
 公路局	gmlj
-光明磊落	gmll
-公	gmll
 公论	gmll
 功名利禄	gmll
+公	gmll
+光明磊落	gmll
 公粮	gmlm
 盖帘	gmln
 公里	gmlo
@@ -28419,6 +28427,7 @@ bilibili	blbl
 国法	gofd
 罡	gofd
 贵方	gofh
+固废	gofh
 罟	gofi
 蛄	gofi
 国防军	gofj
@@ -31282,6 +31291,7 @@ GPRS	gprs
 海参	hdsl
 横断山脉	hdsm
 活塞	hdsn
+海思	hdso
 河山	hdso
 画师	hdsp
 浑身	hdsr
@@ -32706,6 +32716,7 @@ GPRS	gprs
 化工厂	hjgc
 货柜	hjgc
 化工	hjgf
+合规	hjgg
 何干	hjgg
 合格证	hjgi
 合格率	hjgl
@@ -39470,6 +39481,7 @@ GPRS	gprs
 仗义	ijym
 侦	ijyo
 倬	ijyr
+作妖	ijys
 作业	ijyu
 住院	ijyv
 作用	ijyw
@@ -39647,6 +39659,7 @@ GPRS	gprs
 抓好	ikhs
 罪魁祸首	ikhs
 撞坏	ikhu
+指虎	ikhy
 捉	iki
 撞在	ikia
 招展	ikib
@@ -39879,8 +39892,9 @@ GPRS	gprs
 执行	ikxk
 征询	ikxl
 扎心	ikxl
-折现率	ikxl
 撰写	ikxl
+执行力	ikxl
+折现率	ikxl
 哲学	ikxn
 振兴	ikxn
 抓瞎	ikxo
@@ -40708,6 +40722,7 @@ GPRS	gprs
 兹	imx
 着想	imxc
 总协定	imxd
+兆芯	imxe
 总喜欢	imxh
 炸响	imxi
 遵循	imxk
@@ -41099,6 +41114,7 @@ GPRS	gprs
 中国话	iogh
 中高级	iogj
 中观	iogl
+中国梦	iogm
 赃官	iogn
 中国	iogo
 中国区	iogq
@@ -42189,9 +42205,8 @@ GPRS	gprs
 子孙后代	ishd
 斩获	ishe
 转会费	ishf
-指手画脚	ishj
-致幻剂	ishj
 转化	ishj
+指手画脚	ishj
 转换	ishk
 转户	ishl
 致贺	ishn
@@ -42685,16 +42700,19 @@ GPRS	gprs
 造假	itjj
 雉鸡	itjl
 知觉	itjn
+智驾	itjn
 租界	itjo
 重晶石	itjs
 重金属	itjs
 竹简	itjt
 造句	itjw
 租金	itjy
+智驾	itjz
 朱	itk
 自讨苦吃	itkc
 怎可	itkf
 篆刻	itkh
+智库	itkh
 竺可桢	itki
 乍看	itkk
 重扣	itkk
@@ -43738,6 +43756,7 @@ GPRS	gprs
 植物性神经	iwxj
 周详	iwxl
 鲻	iwxo
+猪下水	iwxs
 朝闻夕死	iwxs
 自我牺牲	iwxs
 争先	iwxt
@@ -45490,11 +45509,10 @@ GPRS	gprs
 就地正法	jdif
 濈	jdif
 酒醉	jdif
+江浙沪	jdih
 基地组织	jdii
-经典著作	jdii
 结缔组织	jdii
 家道中落	jdil
-绝对真理	jdil
 酒糟	jdim
 江中	jdio
 酒质	jdiq
@@ -45719,6 +45737,7 @@ GPRS	gprs
 浸渍	jdzd
 就地正法	jdzf
 酒醉	jdzf
+江浙沪	jdzh
 泇	jdzi
 家道中落	jdzl
 绝对真理	jdzl
@@ -46748,6 +46767,7 @@ GPRS	gprs
 决定论	jhdl
 交叠	jhdl
 决断	jhdm
+交道	jhdm
 决定	jhdn
 交电	jhdo
 决定权	jhdq
@@ -46871,6 +46891,7 @@ GPRS	gprs
 就叫	jhji
 减价	jhjj
 交集	jhjj
+京津冀	jhjj
 交接	jhjk
 竞技	jhjk
 将军	jhjl
@@ -49057,7 +49078,7 @@ GPRS	gprs
 缄默无言	jmwy
 卷	jmx
 卷心菜	jmxc
-居民消费	jmxf
+精细化	jmxh
 精修	jmxj
 兼修	jmxj
 精选集	jmxj
@@ -49078,6 +49099,7 @@ GPRS	gprs
 救民于水火	jmyh
 兼优	jmyj
 卷扬	jmyk
+精益	jmym
 卷烟	jmym
 精密仪器	jmyq
 剪影	jmyr
@@ -49251,6 +49273,7 @@ GPRS	gprs
 家长	jnit
 举重	jnit
 架子	jniv
+加载项	jnix
 举止	jniy
 蹇	jniy
 惊厥	jnja
@@ -49526,6 +49549,7 @@ GPRS	gprs
 举重	jnzt
 家长	jnzt
 架子	jnzv
+加载项	jnzx
 举止	jnzy
 家长制	jnzz
 见	jo
@@ -51974,8 +51998,8 @@ GPRS	gprs
 绝路	jxli
 绝伦	jxlj
 纪律	jxlk
-娇小玲珑	jxll
 结论	jxll
+娇小玲珑	jxll
 骏	jxlm
 经略	jxlo
 纪录片	jxlp
@@ -52123,7 +52147,7 @@ GPRS	gprs
 经纬网	jxww
 经纬	jxwx
 经纬线	jxwx
-寄希望于	jxwy
+经纬仪	jxwy
 巨细无遗	jxwy
 锦绣文章	jxwz
 经销部	jxxb
@@ -52658,6 +52682,7 @@ GPRS	gprs
 驾照	jzir
 加重	jzit
 架子	jziv
+加载项	jzix
 加剧	jzjb
 驾机	jzjc
 加减挡	jzjd
@@ -52837,6 +52862,7 @@ GPRS	gprs
 尽忠职守	jzzs
 加重	jzzt
 架子	jzzv
+加载项	jzzx
 急转直下	jzzx
 君主专制	jzzz
 可	k
@@ -58814,6 +58840,7 @@ GPRS	gprs
 阑尾	ljwb
 鸰	ljwd
 例文	ljwh
+领悟力	ljwl
 领悟	ljwn
 领舞	ljwt
 例外	ljww
@@ -59116,6 +59143,7 @@ GPRS	gprs
 绫罗绸缎	llcd
 良臣	llcf
 论丛	llcj
+裸车	llcs
 良策	llct
 论处	llcw
 朗读版	lldb
@@ -60943,7 +60971,7 @@ GPRS	gprs
 鳓	lwfn
 猎	lwfr
 鳓	lwfz
-留个	lwgj
+乐高	lwgh
 螺纹钢筋	lwgj
 乐观	lwgl
 乐购	lwgo
@@ -64361,7 +64389,7 @@ GPRS	gprs
 懵	mne
 懵	mneo
 寞	mner
-密封圈	mnfj
+密封件	mnfj
 蜜蜂	mnfo
 密封圈	mnfq
 密封	mnfu
@@ -66908,9 +66936,8 @@ GPRS	gprs
 难解之谜	njim
 拿走	njiu
 闹着玩	njiw
-宁静致远	njiy
-拿主意	njiy
 闹钟	njiy
+宁静致远	njiy
 闹剧	njjb
 念旧	njji
 拿架子	njji
@@ -67001,9 +67028,8 @@ GPRS	gprs
 难解之谜	njzm
 拿走	njzu
 闹着玩	njzw
-宁静致远	njzy
-拿主意	njzy
 闹钟	njzy
+宁静致远	njzy
 拟	nk
 拧	nk
 捺	nka
@@ -95165,6 +95191,7 @@ GPRS	gprs
 破财免灾	pcmz
 棚内	pcno
 枇杷	pcpc
+骗吃骗喝	pcph
 陪吃陪喝	pcph
 攀爬	pcpq
 骗财骗色	pcps
@@ -106586,6 +106613,7 @@ QQ密码	qqmm
 水平上	sdps
 沙坡头	sdpt
 水平线	sdpx
+水平仪	sdpy
 水瓶座	sdpz
 水到渠成	sdqc
 水枪	sdqc
@@ -108903,6 +108931,7 @@ QQ密码	qqmm
 手工	skgf
 拭干	skgg
 撒狗粮	skgl
+手擀面	skgm
 手骨	skgo
 手稿	skgt
 搜刮	skgt
@@ -109995,6 +110024,7 @@ QQ密码	qqmm
 善	smi
 烧砖	smia
 首张	smib
+杀猪刀	smid
 生命在于运动	smid
 送葬	smie
 善哉	smif
@@ -110349,6 +110379,7 @@ QQ密码	qqmm
 受益者	smyz
 烧砖	smza
 首张	smzb
+杀猪刀	smzd
 生命在于运动	smzd
 送葬	smze
 善哉	smzf
@@ -118085,6 +118116,7 @@ QQ密码	qqmm
 秃撸	ttlk
 拖拖拉拉	ttll
 秃岭	ttlo
+特郎普	ttlp
 秃噜皮	ttlp
 秃撸皮	ttlp
 舔了舔	ttlt
@@ -125574,6 +125606,7 @@ Z	vyz
 无奈	wgna
 玩弄	wgng
 玩闹	wgnj
+无能	wgnl
 未能	wgnl
 违逆	wgnm
 违	wgnn
@@ -126587,8 +126620,9 @@ Z	vyz
 挽救	wkjf
 挖井	wkjg
 微距	wkji
-微机课	wkjk
+挖掘机	wkjj
 挖掘	wkjk
+微机课	wkjk
 往届生	wkjs
 微机室	wkjs
 握紧	wkju
@@ -127268,6 +127302,7 @@ Z	vyz
 网线	woxx
 网页	woya
 网友	woya
+网约车	woyc
 网游	woyd
 蛙泳	woyd
 胃药	woye
@@ -127701,6 +127736,7 @@ Z	vyz
 娃	wsuu
 文思泉涌	wsuy
 瓦屋	wswb
+娃娃菜	wswc
 无始无终	wswi
 万寿无疆	wswj
 无所畏惧	wswj
@@ -130193,6 +130229,7 @@ Z	vyz
 下属	xfsb
 下述	xfsc
 下水道	xfsd
+下水	xfsd
 下渗	xfsd
 下世	xfsf
 想方设法	xfsf
@@ -131977,7 +132014,7 @@ Z	vyz
 心静	xljg
 心迹	xljh
 戏剧化	xljh
-心间	xljj
+询价	xljj
 戏剧家	xljj
 心计	xljl
 心悸	xljn
@@ -134208,6 +134245,7 @@ Z	vyz
 先行者	xtxi
 选修	xtxj
 先行	xtxk
+选项卡	xtxk
 选修课	xtxk
 先写	xtxl
 小偷小摸	xtxm
@@ -147238,6 +147276,7 @@ Z	vyz
 仗义	zjym
 侦	zjyo
 倬	zjyr
+作妖	zjys
 作业	zjyu
 住院	zjyv
 作用	zjyw
@@ -147416,6 +147455,7 @@ Z	vyz
 抓好	zkhs
 罪魁祸首	zkhs
 撞坏	zkhu
+指虎	zkhy
 捉	zki
 撞在	zkia
 招展	zkib
@@ -147651,8 +147691,10 @@ Z	vyz
 哲学家	zkxj
 执行	zkxk
 征询	zkxl
-折现率	zkxl
+扎心	zkxl
 撰写	zkxl
+执行力	zkxl
+折现率	zkxl
 振兴	zkxn
 抓瞎	zkxo
 絷	zkxp
@@ -148473,6 +148515,7 @@ Z	vyz
 兹	zmx
 着想	zmxc
 总协定	zmxd
+兆芯	zmxe
 炸响	zmxi
 遵循	zmxk
 糟心	zmxl
@@ -148861,6 +148904,7 @@ Z	vyz
 中高	zogh
 中高级	zogj
 中观	zogl
+中国梦	zogm
 赃官	zogn
 中国	zogo
 中国区	zogq
@@ -149956,9 +150000,8 @@ Z	vyz
 子孙后代	zshd
 斩获	zshe
 转会费	zshf
-指手画脚	zshj
-致幻剂	zshj
 转化	zshj
+指手画脚	zshj
 转换	zshk
 转户	zshl
 致贺	zshn
@@ -150472,16 +150515,19 @@ Z	vyz
 造假	ztjj
 雉鸡	ztjl
 知觉	ztjn
+智驾	ztjn
 租界	ztjo
 重晶石	ztjs
 重金属	ztjs
 竹简	ztjt
 造句	ztjw
 租金	ztjy
+智驾	ztjz
 朱	ztk
 自讨苦吃	ztkc
 怎可	ztkf
 篆刻	ztkh
+智库	ztkh
 竺可桢	ztki
 乍看	ztkk
 重扣	ztkk
@@ -151521,6 +151567,7 @@ Z	vyz
 植物性神经	zwxj
 周详	zwxl
 鲻	zwxo
+猪下水	zwxs
 朝闻夕死	zwxs
 自我牺牲	zwxs
 争先	zwxt
