--- a/rime/user.yaml
+++ b/rime/user.yaml
@@ -1,9 +1,9 @@
 var:
-  last_build_time: 1720718781
-  previously_selected_schema: zzdyx_single
+  last_build_time: 1721468697
+  previously_selected_schema: zzdyx_mod
   schema_access_time:
     xhup: 1719596156
-    zzdyx_mod: 1720717310
-    zzdyx_mop: 1719951138
+    zzdyx_mod: 1721468986
+    zzdyx_mop: 1721023834
     zzdyx_perfect: 1720547506
     zzdyx_single: 1720717327
