--- a/rime/zzdyx_mofast.dict.yaml
+++ b/rime/zzdyx_mofast.dict.yaml
@@ -2,7 +2,7 @@
 # encoding:utf-8
 ---
 name: zzdyx_mofast
-version: "20240617"
+version: "20240715"
 sort: by_weight
 use_preset_vocabulary: false
 columns:
@@ -5992,7 +5992,7 @@ ATP	atp
 焙烤	bmkm
 半空	bmkn
 半颗	bmko
-八块	bmku
+爆款	bmku
 憋	bml
 并拢	bml
 爆裂	bml
@@ -7841,9 +7841,9 @@ ATP	atp
 霸王别姬	bwbj
 百闻不如一见	bwbj
 包办	bwbn
-包包	bwbw
 饽饽	bwbw
 不闻不问	bwbw
+包包	bwbw
 包办	bwbz
 备不住	bwbz
 包包子	bwbz
@@ -8374,6 +8374,7 @@ ATP	atp
 步步高	bybg
 北部	bybh
 不愠不火	bybh
+钵钵鸡	bybj
 不远不近	bybj
 步兵旅	bybl
 彪炳	bybm
@@ -8412,6 +8413,7 @@ ATP	atp
 步调	bydl
 背地里	bydl
 毕业典礼	bydl
+步道	bydm
 北斗	bydn
 北道区	bydq
 北段	bydr
@@ -8497,6 +8499,7 @@ ATP	atp
 不易之论	byil
 背着	byim
 不言自明	byim
+背债人	byir
 毕业证书	byis
 背着手	byis
 北镇市	byis
@@ -8732,6 +8735,7 @@ ATP	atp
 不易之论	byzl
 背着	byzm
 不言自明	byzm
+背债人	byzr
 毕业证书	byzs
 背着手	byzs
 北镇市	byzs
@@ -9324,6 +9328,7 @@ ATP	atp
 磁效应	caxy
 成衣	cay
 存有	caya
+成渝	cayd
 厨艺	caye
 成员国	cayg
 成瘾	cayh
@@ -15988,6 +15993,7 @@ ATP	atp
 成效显著	cxxi
 巢穴	cxxn
 持续下去	cxxq
+纯血	cxxr
 从下向上	cxxs
 纯小数	cxxs
 持续下去	cxxu
@@ -16745,6 +16751,7 @@ ATP	atp
 大款	daku
 大孔	dakv
 磴口县	dakx
+大卡	daky
 达卡	daky
 殆	dal
 碉楼	dal
@@ -16839,6 +16846,7 @@ ATP	atp
 大盘股	dapg
 大排行	daph
 大碰撞	dapi
+大盘鸡	dapj
 大批	dapk
 大批量	dapl
 大炮	dapm
@@ -16902,6 +16910,7 @@ ATP	atp
 大使馆	dasg
 大傻子	dasi
 大使	dasj
+大数据	dasj
 大势	dask
 大神	dasl
 大受	dasm
@@ -17970,12 +17979,13 @@ ATP	atp
 戴高帽	dfgm
 都怪	dfgn
 带给	dfgx
+都会	dfh
 都还	dfha
 大发横财	dfhc
 戴花	dfhe
 丁亥	dfhh
 洞房花烛	dfhi
-都会	dfhj
+带货	dfhj
 都很	dfhk
 带话	dfhl
 丁火	dfhm
@@ -20418,6 +20428,7 @@ ATP	atp
 提溜算卦	dlsg
 订书机	dlsj
 对手	dlsk
+登山扣	dlsk
 独立思考	dlsk
 对视	dlsl
 读数	dlsm
@@ -27273,9 +27284,11 @@ ATP	atp
 分贝	fmbo
 分不清	fmbq
 翻版	fmbr
+分包商	fmbs
 粉笔	fmbt
 分布图	fmbt
 分不清	fmbu
+分包	fmbw
 粉饼	fmbw
 父辈	fmby
 翻白眼	fmby
@@ -27514,6 +27527,7 @@ ATP	atp
 粪青	fmqg
 父亲	fmqh
 斧	fmqi
+番茄酱	fmqj
 烦请	fmql
 风靡全球	fmqq
 分区	fmqs
@@ -27575,6 +27589,7 @@ ATP	atp
 分期	fmuf
 粪青	fmug
 父亲	fmuh
+番茄酱	fmuj
 烦请	fmul
 分区	fmus
 翻墙	fmuu
@@ -28140,6 +28155,7 @@ ATP	atp
 蜂鸣器	fomq
 蜂鸣器	fomu
 蜉	fomv
+赋能	fonl
 蜂鸟	fonw
 赗	foo
 赗	fooo
@@ -32927,6 +32943,7 @@ GDP	gdp
 高新区	ghxu
 裹胁	ghxv
 隔海相望	ghxw
+赓续	ghxx
 恭贺新禧	ghxx
 光辉形象	ghxx
 高血压	ghxy
@@ -38096,6 +38113,7 @@ GTP	gtp
 海棉	hdmc
 滑动摩擦	hdmc
 浩渺	hdmd
+鸿蒙	hdme
 汉墓	hdme
 海马回	hdmh
 洪魔	hdmh
@@ -39878,6 +39896,7 @@ GTP	gtp
 合格	hjgc
 化工厂	hjgc
 化工	hjgf
+合规	hjgg
 何干	hjgg
 环境规划	hjgh
 合格证	hjgi
@@ -40494,6 +40513,7 @@ GTP	gtp
 徽	hkot
 壶口瀑布	hkpb
 徽派	hkpd
+护坡堤	hkpd
 衡平	hkph
 挥拍	hkpk
 很怕	hkpn
@@ -44286,6 +44306,7 @@ GTP	gtp
 张店区	ibd
 张大	ibda
 找不到北	ibdb
+直播带货	ibdh
 粥店	ibdh
 资不抵债	ibdi
 张灯	ibdm
@@ -48055,6 +48076,7 @@ GTP	gtp
 指挥所	ikhs
 撞坏	ikhu
 指挥权	ikhu
+指虎	ikhy
 指挥员	ikhy
 捉	iki
 振作	iki
@@ -48305,6 +48327,7 @@ GTP	gtp
 执行	ikxk
 撰写	ikxl
 扎心	ikxl
+执行力	ikxl
 折现率	ikxl
 振兴	ikxn
 抓瞎	ikxo
@@ -49713,6 +49736,7 @@ GTP	gtp
 中国话	iogh
 中高级	iogj
 中观	iogl
+中国梦	iogm
 赃官	iogn
 中国	iogo
 中国区	iogq
@@ -51611,6 +51635,7 @@ GTP	gtp
 雉鸡	itjl
 专题节目	itjm
 知觉	itjn
+智驾	itjn
 租界	itjo
 重金属	itjs
 重晶石	itjs
@@ -51618,12 +51643,15 @@ GTP	gtp
 造句	itjw
 主体间性	itjx
 租金	itjy
+智驾	itjz
 朱	itk
+智库	itk
 重扣	itk
 自讨苦吃	itkc
 怎可	itkf
 整体开发	itkf
 篆刻	itkh
+智库	itkh
 竺可桢	itki
 乍看	itkk
 租客	itkn
@@ -52910,6 +52938,7 @@ GTP	gtp
 终场	ixcu
 绽出	ixcv
 纸钞	ixcy
+战新产业	ixcy
 真心诚意	ixcy
 驻点	ixd
 终端机	ixd
@@ -53232,7 +53261,7 @@ GTP	gtp
 纸鸢	ixys
 造型艺术	ixys
 纸业	ixyu
-中学语文	ixyw
+战新业务	ixyw
 纵坐标	ixz
 组织者	ixz
 组织胺	ixza
@@ -53740,6 +53769,7 @@ GTP	gtp
 止泻	iyxd
 桌下	iyxf
 锥形	iyxg
+战新	iyxh
 自由选择	iyxi
 铸像	iyxj
 钻心	iyxl
@@ -54982,6 +55012,7 @@ GTP	gtp
 酒醉	jdif
 就地正法	jdif
 濈	jdif
+江浙沪	jdih
 结缔组织	jdii
 经典著作	jdii
 基地组织	jdii
@@ -55266,6 +55297,7 @@ GTP	gtp
 江浙	jdzd
 酒醉	jdzf
 就地正法	jdzf
+江浙沪	jdzh
 泇	jdzi
 家道中落	jdzl
 绝对真理	jdzl
@@ -55916,6 +55948,7 @@ GTP	gtp
 教员	jfyi
 教研组	jfyi
 基因组	jfyi
+聚一聚	jfyj
 教育局	jfyj
 教育界	jfyj
 教育家	jfyj
@@ -56567,6 +56600,8 @@ GTP	gtp
 交际花	jhjh
 就叫	jhji
 交集	jhjj
+京津冀	jhjj
+计划经济	jhjj
 交接	jhjk
 将军	jhjl
 交卷	jhjm
@@ -57362,7 +57397,7 @@ GTP	gtp
 健儿	jjew
 见机而作	jjez
 借	jjf
-健腹轮	jjf
+伎	jjf
 解决方案	jjfa
 剑法	jjfd
 经济发达	jjfd
@@ -57371,8 +57406,8 @@ GTP	gtp
 借方	jjfh
 经济发展	jjfi
 积极分子	jjfi
-伎	jjfl
 健腹轮	jjfl
+伎	jjfl
 经济发展战略	jjfl
 假发	jjfn
 借机发难	jjfn
@@ -59141,6 +59176,7 @@ GTP	gtp
 剪下	jmxf
 居民消费	jmxf
 紧密相关	jmxg
+精细化	jmxh
 兼修	jmxj
 精选集	jmxj
 精心	jmxl
@@ -59160,6 +59196,7 @@ GTP	gtp
 救民于水火	jmyh
 兼优	jmyj
 卷扬	jmyk
+精益	jmym
 卷烟	jmym
 精密仪器	jmyq
 剪影	jmyr
@@ -59348,6 +59385,7 @@ GTP	gtp
 家族史	jnis
 家长	jnit
 架子	jniv
+加载项	jnix
 举止	jniy
 蹇	jniy
 家居	jnj
@@ -59650,6 +59688,7 @@ GTP	gtp
 家族史	jnzs
 家长	jnzt
 架子	jnzv
+加载项	jnzx
 举止	jnzy
 家长制	jnzz
 见	jo
@@ -61574,6 +61613,7 @@ GTP	gtp
 脚板	jvbc
 脚本	jvbf
 腒	jvbf
+脚脖子	jvbi
 祭拜	jvbk
 腱	jvbl
 脚边	jvbn
@@ -61584,6 +61624,7 @@ GTP	gtp
 降半旗	jvbu
 脚步	jvby
 脚边	jvbz
+脚脖子	jvbz
 阶层	jvcb
 脚踩	jvci
 脚穿	jvcn
@@ -62762,6 +62803,7 @@ GTP	gtp
 经纬网	jxww
 经纬	jxwx
 经纬线	jxwx
+经纬仪	jxwy
 寄希望于	jxwy
 巨细无遗	jxwy
 锦绣文章	jxwz
@@ -62955,6 +62997,7 @@ GTP	gtp
 金刚经	jygj
 金冠	jygl
 经营管理	jygl
+精益管理	jygl
 经营规模	jygm
 金刚	jygo
 金瓜	jygq
@@ -63157,6 +63200,7 @@ GTP	gtp
 金丝雀	jys
 金石	jysa
 金属	jysb
+精益生产	jysc
 钜	jysc
 金沙	jysd
 决一胜负	jysf
@@ -63292,6 +63336,7 @@ GTP	gtp
 锦衣夜行	jyyx
 金阳县	jyyx
 金银	jyyy
+精益运营	jyyy
 金州区	jyz
 冀州市	jyz
 金针菜	jyz
@@ -63459,6 +63504,7 @@ GTP	gtp
 驾照	jzir
 加重	jzit
 架子	jziv
+加载项	jzix
 加剧	jzjb
 驾机	jzjc
 加减挡	jzjd
@@ -63678,6 +63724,7 @@ GTP	gtp
 就在这时	jzzs
 加重	jzzt
 架子	jzzv
+加载项	jzzx
 急转直下	jzzx
 君主专制	jzzz
 可	k
@@ -64678,6 +64725,7 @@ GTP	gtp
 开花期	kghq
 开户人	kghr
 开好	kghs
+开合跳	kght
 开花期	kghu
 开化县	kghx
 开	kgi
@@ -70841,6 +70889,7 @@ GTP	gtp
 赁屋	ljwb
 鸰	ljwd
 例文	ljwh
+领悟力	ljwl
 领悟	ljwn
 领舞	ljwt
 例外	ljww
@@ -71176,6 +71225,7 @@ GTP	gtp
 绫罗绸缎	llcd
 良臣	llcf
 论丛	llcj
+裸车	llcs
 良策	llct
 论处	llcw
 礼单	lld
@@ -72220,6 +72270,7 @@ GTP	gtp
 晾	lrhi
 量化	lrhj
 令人害怕	lrhp
+驴肉火烧	lrhs
 令人回味	lrhw
 令人怀疑	lrhy
 量在	lria
@@ -73445,6 +73496,7 @@ GTP	gtp
 猎	lwfr
 鳓	lwfz
 乐果	lwg
+乐高	lwgh
 留个	lwgj
 螺纹钢筋	lwgj
 乐观	lwgl
@@ -77379,6 +77431,7 @@ GTP	gtp
 寞	mner
 母女二人	mner
 密封圈	mnf
+密封件	mnfj
 蜜蜂	mnfo
 卖弄风情	mnfq
 密封圈	mnfq
@@ -78867,6 +78920,7 @@ GTP	gtp
 名门	mwmj
 没完没了	mwml
 名目	mwmo
+馍馍	mwmw
 猛犸	mwmw
 名马	mwmx
 勉	mwn
@@ -123942,6 +123996,7 @@ QQ密码	qqmm
 水平上	sdps
 沙坡头	sdpt
 水平线	sdpx
+水平仪	sdpy
 水瓶座	sdpz
 水汽	sdq
 水气	sdq
@@ -126760,6 +126815,7 @@ QQ密码	qqmm
 手表	skbg
 手部	skbh
 深刻变化	skbh
+手脖子	skbi
 手把件	skbj
 搜捕	skbk
 势必	skbl
@@ -126771,6 +126827,7 @@ QQ密码	qqmm
 时刻不忘	skbw
 手背	skby
 手边	skbz
+手脖子	skbz
 手持	skc
 手抄	skc
 手戳	skc
@@ -126842,6 +126899,7 @@ QQ密码	qqmm
 手工	skgf
 拭干	skgg
 撒狗粮	skgl
+手擀面	skgm
 手骨	skgo
 手稿	skgt
 摔跟头	skgt
@@ -127028,6 +127086,7 @@ QQ密码	qqmm
 手术	sksc
 摄氏度	sksd
 手术刀	sksd
+双卡双待	sksd
 搜索	sksf
 逝世	sksf
 手速	sksf
@@ -127269,6 +127328,7 @@ QQ密码	qqmm
 神池县	slcx
 说错	slcy
 顺理成章	slcz
+双打	sld
 视点	sld
 诵读	sld
 圣诞夜	sld
@@ -128095,6 +128155,7 @@ QQ密码	qqmm
 朔州	smi
 烧砖	smia
 首张	smib
+杀猪刀	smid
 生命在于运动	smid
 送葬	smie
 善哉	smif
@@ -128501,6 +128562,7 @@ QQ密码	qqmm
 烧纸	smz
 烧砖	smza
 首张	smzb
+杀猪刀	smzd
 生命在于运动	smzd
 送葬	smze
 善哉	smzf
@@ -137313,6 +137375,7 @@ sp³杂化	spsh
 体弱多病	trdb
 躺倒	trdj
 躺到	trds
+躺地	trdu
 同日而语	trey
 昙	trg
 题干	trgg
@@ -147844,6 +147907,7 @@ Z	vyz
 微积分	wkjf
 挖井	wkjg
 微距	wkji
+挖掘机	wkjj
 挖掘	wkjk
 微机课	wkjk
 微机室	wkjs
@@ -148393,7 +148457,7 @@ Z	vyz
 王码五笔	wmwb
 鹟	wmwd
 为王	wmwg
-为文	wmwh
+煨弯	wmwh
 为伍	wmwj
 无门无派	wmwp
 完美无缺	wmwq
@@ -148804,6 +148868,7 @@ Z	vyz
 网游	woy
 蚊蝇	woy
 网友	woya
+网约车	woyc
 蛙泳	woyd
 网游	woyd
 胃药	woye
@@ -149334,6 +149399,7 @@ Z	vyz
 万万	wsw
 万维网	wsw
 瓦屋	wswb
+娃娃菜	wswc
 无始无终	wswi
 无所畏惧	wswj
 万寿无疆	wswj
@@ -153101,6 +153167,7 @@ Z	vyz
 新德里	xhdl
 辛德勒	xhdl
 雪道	xhdm
+新动能	xhdn
 销魂夺魄	xhdp
 霰弹枪	xhdq
 新的	xhdr
@@ -154008,6 +154075,7 @@ Z	vyz
 信产部	xjcb
 闲	xjcc
 仙草	xjce
+信创	xjcj
 修持	xjck
 闲扯	xjck
 斜刺里	xjcl
@@ -154889,6 +154957,7 @@ Z	vyz
 心迹	xljh
 戏剧化	xljh
 心间	xljj
+询价	xljj
 戏剧家	xljj
 心理健康	xljk
 心计	xljl
@@ -156517,6 +156586,7 @@ Z	vyz
 舷	xqh
 舷号	xqhi
 性情豪爽	xqhs
+新签合同	xqht
 舷	xqhx
 须在	xqia
 需求状况	xqik
@@ -157595,6 +157665,7 @@ Z	vyz
 选修	xtxj
 先行	xtxk
 选修课	xtxk
+选项卡	xtxk
 先写	xtxl
 小偷小摸	xtxm
 选学	xtxn
@@ -157715,6 +157786,7 @@ Z	vyz
 喜欢	xuhl
 喜欢你	xuhn
 幸好	xuhs
+新签合同	xuht
 喜	xui
 埙	xui
 贤者	xuif
@@ -158429,8 +158501,9 @@ Z	vyz
 修行在个人	xxir
 细致	xxis
 线装书	xxis
-乡长	xxit
+续租	xxit
 惺惺作态	xxit
+乡长	xxit
 相形之下	xxix
 信息中心	xxix
 乡镇	xxiy
@@ -158706,8 +158779,9 @@ Z	vyz
 修行在个人	xxzr
 细致	xxzs
 线装书	xxzs
-乡长	xxzt
+续租	xxzt
 惺惺作态	xxzt
+乡长	xxzt
 相形之下	xxzx
 信息中心	xxzx
 乡镇	xxzy
@@ -161365,6 +161439,7 @@ Z	vyz
 药理	yelg
 荫凉	yelh
 英伦	yelj
+么	yell
 营垒	yell
 药力	yeln
 英里	yelo
@@ -162598,6 +162673,7 @@ Z	vyz
 亦在	yhia
 优惠政策	yhic
 壅滞	yhid
+鹰嘴豆	yhid
 雍正	yhif
 嬴政	yhif
 音准	yhih
@@ -162946,6 +163022,7 @@ Z	vyz
 亦在	yhza
 优惠政策	yhzc
 壅滞	yhzd
+鹰嘴豆	yhzd
 疡	yhze
 雍正	yhzf
 嬴政	yhzf
@@ -164481,9 +164558,11 @@ Z	vyz
 永仁	ylrj
 预热	ylrk
 谀	ylrk
+压力容器	ylrq
 翌日	ylrr
 又如	ylrs
 引狼入室	ylrs
+压力容器	ylru
 讶然	ylrv
 讶然	ylrw
 羽绒	ylrx
@@ -164735,6 +164814,7 @@ Z	vyz
 遥测	ymcd
 烟草	ymce
 圆满成功	ymcg
+羊肠子	ymci
 益虫	ymco
 烟尘	ymcp
 烟囱	ymcr
@@ -164748,6 +164828,7 @@ Z	vyz
 义齿	ymcy
 烟草业	ymcy
 一名成员	ymcy
+羊肠子	ymcz
 养大	ymda
 夜幕低垂	ymdc
 欲滴	ymdd
@@ -168107,7 +168188,7 @@ Z	vyz
 印加	ywjz
 咬文嚼字	ywjz
 乐	ywk
-乐	ywkk
+么	ywkk
 依我看来	ywkl
 迎客	ywkn
 一无可取	ywkq
@@ -169643,6 +169724,7 @@ Z	vyz
 张店区	zbd
 张大	zbda
 找不到北	zbdb
+直播带货	zbdh
 粥店	zbdh
 张灯	zbdm
 周边地区	zbdq
@@ -173174,6 +173256,7 @@ Z	vyz
 指挥所	zkhs
 撞坏	zkhu
 指挥权	zkhu
+指虎	zkhy
 指挥员	zkhy
 捉	zki
 振作	zki
@@ -173452,6 +173535,8 @@ Z	vyz
 哲学家	zkxj
 执行	zkxk
 撰写	zkxl
+扎心	zkxl
+执行力	zkxl
 折现率	zkxl
 振兴	zkxn
 抓瞎	zkxo
@@ -174838,6 +174923,7 @@ Z	vyz
 中国话	zogh
 中高级	zogj
 中观	zogl
+中国梦	zogm
 赃官	zogn
 中国	zogo
 中国区	zogq
@@ -176755,6 +176841,7 @@ Z	vyz
 雉鸡	ztjl
 专题节目	ztjm
 知觉	ztjn
+智驾	ztjn
 租界	ztjo
 重金属	ztjs
 重晶石	ztjs
@@ -176762,12 +176849,15 @@ Z	vyz
 造句	ztjw
 主体间性	ztjx
 租金	ztjy
+智驾	ztjz
 朱	ztk
+智库	ztk
 重扣	ztk
 自讨苦吃	ztkc
 怎可	ztkf
 整体开发	ztkf
 篆刻	ztkh
+智库	ztkh
 竺可桢	ztki
 乍看	ztkk
 租客	ztkn
@@ -178039,6 +178129,7 @@ Z	vyz
 终场	zxcu
 绽出	zxcv
 纸钞	zxcy
+战新产业	zxcy
 真心诚意	zxcy
 驻点	zxd
 终端机	zxd
@@ -178364,7 +178455,7 @@ Z	vyz
 纸鸢	zxys
 造型艺术	zxys
 纸业	zxyu
-中学语文	zxyw
+战新业务	zxyw
 纵坐标	zxz
 组织者	zxz
 组织部	zxz
@@ -178876,6 +178967,7 @@ Z	vyz
 止泻	zyxd
 桌下	zyxf
 锥形	zyxg
+战新	zyxh
 铸像	zyxj
 钻心	zyxl
 钟祥	zyxl
