--- a/rime/zzdyx_mod.dict.yaml
+++ b/rime/zzdyx_mod.dict.yaml
@@ -16275,9 +16275,8 @@ bilibili	blbl
 得早	dkir
 得罪人	dkir
 掉转	dkis
-打造	dkit
 抵制	dkit
-得志	dkiu
+打造	dkit
 德智体	dkit
 打砸抢	dkiu
 担子	dkiv
@@ -27968,8 +27967,8 @@ bilibili	blbl
 关节腔	gmju
 公祭	gmjv
 公祭	gmjw
-关节炎	gmjy
 关键	gmjy
+关节炎	gmjy
 国民教育	gmjy
 公交站	gmjz
 关键字	gmjz
@@ -39451,7 +39450,7 @@ GPRS	gprs
 做文章	ijwz
 仲夏	ijxa
 住校	ijxc
-逐渐形成	ijxc
+作协	ijxf
 坐席	ijxh
 坐享	ijxh
 作响	ijxi
@@ -41791,6 +41790,7 @@ GPRS	gprs
 知人知面不知心	irix
 追歼	irja
 自己	irjb
+自家	irjb
 自居	irjb
 自检	irjc
 自荐	irje
@@ -41806,9 +41806,10 @@ GPRS	gprs
 自掘	irjk
 自矜	irjl
 自觉	irjn
+追究	irjn
+自家	irjn
 自驾	irjn
 追加	irjn
-追究	irjn
 最具	irjo
 最近	irjq
 自决权	irjq
@@ -48047,7 +48048,6 @@ GPRS	gprs
 接访	jkfl
 揭发	jkfn
 接发球	jkfq
-接发球	jkfu
 街坊	jkfu
 接防	jkfv
 接风	jkfw
@@ -48922,8 +48922,8 @@ GPRS	gprs
 精讲	jmjl
 炯炯	jmjm
 兼具	jmjo
-假模假式	jmjs
 剪辑	jmjs
+假模假式	jmjs
 精简	jmjt
 兼	jmk
 精矿	jmka
@@ -51917,8 +51917,8 @@ GPRS	gprs
 绞	jxh
 结核病	jxhb
 骄横	jxhc
-结合点	jxhd
 绝活	jxhd
+结合点	jxhd
 缴获	jxhe
 精心呵护	jxhh
 经互会	jxhh
@@ -53357,8 +53357,8 @@ GPRS	gprs
 克	kfi
 考砸	kfia
 酷站	kfih
-口腹之累	kfil
 考证	kfil
+口腹之累	kfil
 可憎	kfin
 考中	kfio
 夸父追日	kfir
@@ -53512,8 +53512,8 @@ GPRS	gprs
 考砸	kfza
 可执行	kfzh
 酷站	kfzh
-口腹之累	kfzl
 考证	kfzl
+口腹之累	kfzl
 夸父追日	kfzr
 夸父逐日	kfzr
 可再生	kfzs
@@ -68189,8 +68189,8 @@ GPRS	gprs
 牛	nti
 黏滞	ntid
 牛仔服	ntif
-年终奖	ntij
 牛仔	ntij
+年终奖	ntij
 牛仔裤	ntik
 黏着	ntim
 年中	ntio
@@ -68300,8 +68300,8 @@ GPRS	gprs
 氖	ntz
 黏滞	ntzd
 牛仔服	ntzf
-年终奖	ntzj
 牛仔	ntzj
+年终奖	ntzj
 牛仔裤	ntzk
 黏着	ntzm
 年长	ntzt
@@ -95355,6 +95355,7 @@ GPRS	gprs
 泡汤	pdtd
 湃	pdtg
 派头	pdtn
+泡腾片	pdtp
 澎	pdu
 派遣证	pdui
 派遣	pduo
@@ -110483,8 +110484,8 @@ QQ密码	qqmm
 塞给	sngx
 窣	snh
 山南海北	snhb
-十年寒窗	snhc
 审核	snhc
+十年寒窗	snhc
 少女怀春	snhc
 实惠	snhf
 守活寡	snhg
@@ -112883,7 +112884,7 @@ QQ密码	qqmm
 声息	suxr
 声讯台	suxt
 肾小球	suxu
-失去信心	suxx
+声线	suxx
 竖线	suxx
 肾虚	suxy
 声压	suya
@@ -116271,8 +116272,8 @@ QQ密码	qqmm
 团结协作	tjxi
 堂兄	tjxi
 偷闲	tjxj
-停下来	tjxl
 贪心	tjxl
+停下来	tjxl
 体恤	tjxn
 贪小	tjxp
 停歇	tjxr
@@ -117701,6 +117702,7 @@ QQ密码	qqmm
 帖	toyi
 同义	toym
 团圆	toyo
+田园	toyo
 田野	toyo
 同意书	toys
 同一天	toyt
@@ -126613,8 +126615,8 @@ Z	vyz
 无可置疑	wkiy
 往届	wkjb
 微机	wkjc
-微积分	wkjf
 挽救	wkjf
+微积分	wkjf
 挖井	wkjg
 微距	wkji
 挖掘机	wkjj
@@ -140934,8 +140936,8 @@ Z	vyz
 眼角膜	yojm
 遗精	yojm
 邮寄	yojn
-眼睛	yojo
 遇见	yojo
+眼睛	yojo
 眼尖	yojp
 眼镜蛇	yojs
 嵛	yojv
@@ -147244,7 +147246,7 @@ Z	vyz
 至今为止	zjwz
 仲夏	zjxa
 住校	zjxc
-逐渐形成	zjxc
+作协	zjxf
 坐席	zjxh
 坐享	zjxh
 作响	zjxi
@@ -149586,6 +149588,7 @@ Z	vyz
 知人知面不知心	zrix
 追歼	zrja
 自己	zrjb
+自家	zrjb
 自居	zrjb
 自检	zrjc
 自荐	zrje
@@ -149598,8 +149601,10 @@ Z	vyz
 自掘	zrjk
 自矜	zrjl
 自觉	zrjn
-自驾	zrjn
 追究	zrjn
+自家	zrjn
+自驾	zrjn
+追加	zrjn
 最具	zrjo
 昣	zrjq
 最近	zrjq
