--- a/rime/zzdyx_mod.custom.yaml
+++ b/rime/zzdyx_mod.custom.yaml
@@ -48,8 +48,8 @@
     #idx: 4
 
   #20240722-尝试用动态调频来修正词库。
-  translator/enable_user_dict: true
-  translator/db_class: plain_userdb
+  #translator/enable_user_dict: true
+  #translator/db_class: plain_userdb
 
 #opencc功能：简繁转换
   simplifier:
