--- a/rime/zzdyx_mod.dict.yaml
+++ b/rime/zzdyx_mod.dict.yaml
@@ -39665,6 +39665,7 @@ GPRS	gprs
 哲哲豆	ikid
 执著	ikie
 指正	ikif
+执政	ikif
 指责	ikig
 执政官	ikig
 折衷	ikih
@@ -42181,6 +42182,7 @@ GPRS	gprs
 直升飞机	isfj
 再生父母	isfm
 转发	isfn
+致富	isfn
 转发器	isfq
 走私贩私	isfs
 转发器	isfu
@@ -60530,8 +60532,8 @@ GPRS	gprs
 乱石	ltsa
 梨树	ltsc
 利湿	ltsd
-乱收费	ltsf
 利索	ltsf
+乱收费	ltsf
 利市	ltsh
 乱说	ltsl
 六韬三略	ltsl
@@ -102364,8 +102366,8 @@ QQ密码	qqmm
 起到	quds
 墙垛	qudu
 去冬	qudw
-千秋大业	qudy
 起点	qudy
+千秋大业	qudy
 起而	quea
 群起而攻之	quei
 墙	quf
@@ -115451,8 +115453,8 @@ QQ密码	qqmm
 天天	tgtg
 天庭	tgth
 吞吐	tgti
-天体	tgtj
 天堂	tgtj
+天体	tgtj
 天台	tgtl
 吞吐量	tgtl
 珽	tgtl
@@ -116520,10 +116522,10 @@ QQ密码	qqmm
 推论	tkll
 挺	tkll
 痛快淋漓	tkll
-塔克拉玛干沙漠	tklm
+提炼	tklm
 托勒密	tklm
 推拉门	tklm
-提炼	tklm
+塔克拉玛干沙漠	tklm
 推力	tkln
 拖累	tklo
 捅	tklo
@@ -123436,8 +123438,8 @@ QQ密码	qqmm
 起到	uuds
 墙垛	uudu
 去冬	uudw
-千秋大业	uudy
 起点	uudy
+千秋大业	uudy
 起而	uuea
 群起而攻之	uuei
 群起而攻之	uuez
@@ -147733,6 +147735,7 @@ Z	vyz
 哲哲豆	zkzd
 执著	zkze
 指正	zkzf
+执政	zkzf
 指责	zkzg
 执政官	zkzg
 折衷	zkzh
@@ -149974,6 +149977,7 @@ Z	vyz
 姊夫	zsfg
 直升飞机	zsfj
 再生父母	zsfm
+转发	zsfn
 致富	zsfn
 转发器	zsfq
 走私贩私	zsfs
