--- a/rime/user.yaml
+++ b/rime/user.yaml
@@ -1,9 +1,9 @@
 var:
-  last_build_time: 1726639087
-  previously_selected_schema: zzdyx_mod
+  last_build_time: 1729761628
+  previously_selected_schema: zzdyx_perfect
   schema_access_time:
     xhup: 1719596156
-    zzdyx_mod: 1724783533
+    zzdyx_mod: 1728367676
     zzdyx_mop: 1721023834
-    zzdyx_perfect: 1720547506
-    zzdyx_single: 1720717327
+    zzdyx_perfect: 1729761633
+    zzdyx_single: 1728436593
