--- a/rime/zzdyx_mod.dict.yaml
+++ b/rime/zzdyx_mod.dict.yaml
@@ -23871,6 +23871,7 @@ bilibili	blbl
 风调雨顺	ftys
 复盐	ftyu
 复印	ftyw
+复用	ftyw
 复印纸	ftyz
 繁殖	ftza
 复职	ftzf
@@ -37167,14 +37168,12 @@ GPRS	gprs
 淄	idx
 治校	idxc
 致答谢词	idxc
-最大限度	idxd
 涨薪	idxe
-直到现在	idxi
 治学	idxn
 淄	idxo
 滞销品	idxp
-中等学校	idxx
 注销	idxy
+滞销	idxy
 沾	idy
 滞压	idya
 汁液	idyd
@@ -37183,13 +37182,11 @@ GPRS	gprs
 注音	idyh
 滋育	idyh
 治愈	idyj
-睁大眼睛	idyj
 注意力	idyl
 志得意满	idym
 滋养	idym
 浈	idyo
 淖	idyr
-主动运输	idys
 掷地有声	idys
 值得一提	idyt
 滋阴	idyv
@@ -39900,8 +39897,8 @@ GPRS	gprs
 振兴	ikxn
 抓瞎	ikxo
 絷	ikxp
-执行人	ikxr
 指向	ikxr
+执行人	ikxr
 哲学史	ikxs
 招贤	ikxu
 招降	ikxv
@@ -57608,6 +57605,7 @@ GPRS	gprs
 联席会	lfxh
 老兄	lfxi
 两下子	lfxi
+老仙	lfxj
 老学究	lfxj
 两性	lfxn
 鬣	lfxo
@@ -145108,7 +145106,7 @@ Z	vyz
 滞销品	zdxp
 中等学校	zdxx
 注销	zdxy
-直到现在	zdxz
+滞销	zdxy
 沾	zdy
 滞压	zdya
 汁液	zdyd
@@ -147698,8 +147696,8 @@ Z	vyz
 振兴	zkxn
 抓瞎	zkxo
 絷	zkxp
-执行人	zkxr
 指向	zkxr
+执行人	zkxr
 哲学史	zkxs
 招贤	zkxu
 招降	zkxv
