--- a/rime/user.yaml
+++ b/rime/user.yaml
@@ -1,9 +1,9 @@
 var:
-  last_build_time: 1729761628
-  previously_selected_schema: zzdyx_perfect
+  last_build_time: 1735389741
+  previously_selected_schema: zzdyx_mod
   schema_access_time:
     xhup: 1719596156
-    zzdyx_mod: 1728367676
+    zzdyx_mod: 1735405290
     zzdyx_mop: 1721023834
-    zzdyx_perfect: 1729761633
+    zzdyx_perfect: 1735323397
     zzdyx_single: 1728436593
