--- a/rime/zzdyx_mod.dict.yaml
+++ b/rime/zzdyx_mod.dict.yaml
@@ -402,6 +402,8 @@ CPU	cpu
 阿姆斯特丹	amsd
 爱神	amsl
 阿姆斯特朗	amsl
+爱谁谁	amss
+爱啥啥	amss
 阿弥陀佛	amtf
 爱徒	amtk
 澳门特别行政区	amtq
@@ -1957,6 +1959,7 @@ CPU	cpu
 白俄罗斯	bels
 薄利	belt
 芭蕾舞	belw
+芭乐	belw
 蔽	bem
 薄面	bema
 薄暮	beme
@@ -2080,6 +2083,7 @@ CPU	cpu
 百分之百	bfib
 贲张	bfib
 本职	bfif
+博主	bfih
 本站	bfih
 北伐战争	bfii
 本证	bfil
@@ -2263,6 +2267,7 @@ CPU	cpu
 百分之百	bfzb
 贲张	bfzb
 本职	bfzf
+博主	bfzh
 本站	bfzh
 本证	bfzl
 鞁	bfzl
@@ -4703,6 +4708,7 @@ bilibili	blbl
 边角	bnjw
 边境线	bnjx
 边界线	bnjx
+办结	bnjx
 办教育	bnjy
 边检站	bnjz
 办	bnk
@@ -6404,6 +6410,7 @@ bilibili	blbl
 辈出	bycv
 北朝鲜	bycx
 钡餐	bycy
+背调	byd
 北大	byda
 背对背	bydb
 背带	bydf
@@ -9211,6 +9218,7 @@ bilibili	blbl
 伺候	cjhj
 催化	cjhj
 催化剂	cjhj
+传呼机	cjhj
 裳	cjhk
 长江后浪推前浪	cjhl
 闯祸	cjhl
@@ -10490,6 +10498,7 @@ bilibili	blbl
 采石	cmsa
 炊事班	cmsb
 采石场	cmsc
+焯水	cmsd
 差事	cmsf
 曾说过	cmsg
 城门失火	cmsh
@@ -11937,6 +11946,7 @@ bilibili	blbl
 长远	ctyg
 称意	ctyh
 长吟	ctyi
+重阳节	ctyj
 程咬金	ctyj
 簇拥	ctyk
 乘以	ctyl
@@ -13032,6 +13042,7 @@ bilibili	blbl
 出现意外	cxyw
 绰约	cxyx
 纯银	cxyy
+纯音乐	cxyy
 缠在	cxza
 纯真	cxzf
 缠足	cxzi
@@ -15923,6 +15934,7 @@ bilibili	blbl
 低俗	djsj
 代	djsk
 短斤少两	djsl
+倒数	djsm
 代数	djsm
 党史	djso
 担惊受怕	djsp
@@ -16586,6 +16598,7 @@ bilibili	blbl
 打针	dkzy
 打嘴仗	dkzz
 对	dl
+订	dl
 读	dl
 谍	dl
 哆啦A梦	dlam
@@ -18520,6 +18533,7 @@ bilibili	blbl
 等势面	dtsm
 答数	dtsm
 笃实	dtsn
+短视频	dtsp
 第四	dtso
 短时	dtsr
 等式	dtss
@@ -22326,6 +22340,7 @@ bilibili	blbl
 福克纳	flkn
 弗兰肯斯坦	flkt
 房款	flku
+房卡	flky
 房龙	flla
 福楼拜	fllb
 房梁	flld
@@ -26149,8 +26164,8 @@ bilibili	blbl
 共振	gfik
 工资卡	gfik
 工作狂	gfik
-工作量	gfil
 恭祝	gfil
+工作量	gfil
 更糟	gfim
 故宅	gfin
 过账	gfio
@@ -26501,8 +26516,8 @@ bilibili	blbl
 共振	gfzk
 工资卡	gfzk
 工作狂	gfzk
-工作量	gfzl
 恭祝	gfzl
+工作量	gfzl
 更糟	gfzm
 故宅	gfzn
 过账	gfzo
@@ -27437,6 +27452,7 @@ bilibili	blbl
 光明	gjmr
 国计民生	gjms
 光敏	gjmt
+光猫	gjmw
 伽马	gjmx
 纲举目张	gjmz
 伽	gjn
@@ -31728,6 +31744,7 @@ GPRS	gprs
 豪放不羁	hfbj
 黄骠马	hfbm
 黄白	hfbr
+好饭不怕晚	hfbw
 胡编	hfbx
 惠存	hfca
 黄灿灿	hfcc
@@ -36779,11 +36796,11 @@ GPRS	gprs
 柱	ich
 柱	ichd
 梓	ichf
+樟	ichf
 棕黄	ichf
 再创辉煌	ichh
 张敞画眉	ichm
 札幌	icho
-樟	ichr
 桩	ichu
 枳	ici
 枕在	icia
@@ -37013,11 +37030,11 @@ GPRS	gprs
 重大贡献	idgx
 注	idh
 漳河	idhd
+漳	idhf
 沾化	idhj
 直捣黄龙	idhl
 治黑	idho
 滞后	idhq
-漳	idhr
 止跌回升	idhs
 治好	idhs
 值得回味	idhw
@@ -37282,6 +37299,7 @@ GPRS	gprs
 坐而论道	ield
 芝	ielk
 葬礼	iell
+蘸料	ielm
 藻类	ielm
 足额领取	ielq
 蒸馏水	iels
@@ -37975,10 +37993,10 @@ GPRS	gprs
 璋	igh
 专横	ighc
 珠海	ighd
+璋	ighf
 战功赫赫	ighh
 专号	ighi
 专户	ighl
-璋	ighr
 专治	igid
 专注	igid
 知根知底	igid
@@ -38310,10 +38328,12 @@ GPRS	gprs
 主刀	ihdz
 震耳	ihef
 中华儿女	ihen
+章	ihf
 症	ihf
 资费	ihfb
 章法	ihfd
 战火纷飞	ihff
+章	ihff
 资方	ihfh
 主阀	ihfj
 这番	ihfm
@@ -38351,6 +38371,7 @@ GPRS	gprs
 装潢	ihhd
 壮汉	ihhd
 麈	ihhd
+瘴	ihhf
 座号	ihhi
 霅	ihhi
 症候	ihhj
@@ -38359,7 +38380,6 @@ GPRS	gprs
 壮火	ihhm
 震憾	ihhn
 章回	ihho
-瘴	ihhr
 装好	ihhs
 装糊涂	ihht
 装	ihhw
@@ -38518,9 +38538,7 @@ GPRS	gprs
 站起	ihqu
 装腔	ihqv
 准确性	ihqx
-章	ihr
 沾花惹草	ihrc
-章	ihrf
 主人公	ihrg
 主人	ihrj
 主任	ihrj
@@ -41128,6 +41146,9 @@ GPRS	gprs
 中后场	iohc
 蛀	iohd
 中韩	iohf
+蟑	iohf
+嶂	iohf
+幛	iohf
 忠魂	iohg
 账号	iohi
 中华	iohj
@@ -41140,8 +41161,6 @@ GPRS	gprs
 幢	ioho
 置后	iohq
 中后期	iohq
-嶂	iohr
-幛	iohr
 中和	ioht
 中后期	iohu
 赃	iohu
@@ -41735,6 +41754,7 @@ GPRS	gprs
 追赶	irgu
 追还	irha
 照海	irhd
+暲	irhf
 最惠国	irhg
 自豪感	irhg
 自豪	irhh
@@ -41744,7 +41764,6 @@ GPRS	gprs
 最恨	irhn
 追回	irho
 最后	irhq
-暲	irhr
 自毁	irhr
 最好	irhs
 早婚	irhs
@@ -42206,13 +42225,13 @@ GPRS	gprs
 子孙后代	ishd
 斩获	ishe
 转会费	ishf
+嫜	ishf
 转化	ishj
 指手画脚	ishj
 转换	ishk
 转户	ishl
 致贺	ishn
 转圜	isho
-嫜	ishr
 株式会社	ishs
 转好	ishs
 辙	isht
@@ -43341,11 +43360,11 @@ GPRS	gprs
 阻隔	ivgv
 脏	ivh
 脏活	ivhd
+障	ivhf
 脏乎乎	ivhh
 阻吓	ivhi
 脏话	ivhl
 坠毁	ivhr
-障	ivhr
 脏	ivhu
 胀红	ivhx
 阻滞	ivid
@@ -43558,6 +43577,7 @@ GPRS	gprs
 詹	iwh
 杂活	iwhd
 杂货店	iwhd
+獐	iwhf
 中外合资	iwhi
 周会	iwhj
 杂合	iwhj
@@ -43565,7 +43585,6 @@ GPRS	gprs
 杂烩	iwhm
 鳣	iwho
 杂货铺	iwhp
-獐	iwhr
 鳣	iwhr
 旨在	iwia
 追亡逐北	iwib
@@ -44218,11 +44237,12 @@ GPRS	gprs
 铡刀	iydz
 载誉而归	iyeg
 中医儿科	iyek
+镇	iyf
 针	iyf
 造谣诽谤	iyfb
 战法	iyfd
 钲	iyfd
-卓	iyff
+针	iyff
 贞丰	iyfg
 战俘	iyfj
 战斧	iyfm
@@ -44423,6 +44443,7 @@ GPRS	gprs
 战胜国	iysg
 紫砂壶	iysh
 止损	iysk
+战损	iysk
 卓识	iysl
 庄严肃穆	iysm
 战士们	iysm
@@ -47135,6 +47156,7 @@ GPRS	gprs
 减息	jhxr
 决心书	jhxs
 竞选	jhxt
+酱香	jhxt
 交响曲	jhxu
 迹象	jhxw
 就绪	jhxx
@@ -50237,6 +50259,7 @@ GPRS	gprs
 皆会	jshj
 姣	jshk
 嫁祸	jshl
+较	jshm
 姣	jshm
 嫉恨	jshn
 姣好	jshs
@@ -52309,9 +52332,9 @@ GPRS	gprs
 铗	jyhk
 铰	jyhk
 铰	jyhm
-镜	jyhr
 金黄色	jyhs
 寄予厚望	jyhw
+镜	jyhw
 金猴	jyhw
 家喻户晓	jyhx
 交易活跃	jyhy
@@ -53060,6 +53083,7 @@ GPRS	gprs
 枯燥	kcim
 框中	kcio
 框子	kciv
+柯基	kcjf
 枯井	kcjg
 枯竭	kcjh
 枯焦	kcjj
@@ -53135,6 +53159,7 @@ GPRS	gprs
 哭爹叫娘	kdjn
 宽带接入	kdjr
 溃口	kdki
+可丁可卯	kdkm
 可多可少	kdks
 可大可小	kdkx
 宽带连接	kdlj
@@ -55865,6 +55890,7 @@ GPRS	gprs
 锟	kyrs
 锴	kys
 卡死	kysa
+卡司	kysb
 肯说	kysl
 锴	kysr
 卡塔尔	kyte
@@ -58316,6 +58342,8 @@ GPRS	gprs
 零钱	lhuy
 疗	lhv
 孪	lhvd
+羸	lhvm
+嬴	lhvo
 膂	lhvv
 酃	lhvv
 癃	lhvw
@@ -62311,6 +62339,7 @@ GPRS	gprs
 没成	mdca
 矛盾重重	mdcc
 渑池	mdcd
+漫才	mdcf
 马到成功	mdcg
 没吃	mdci
 满仓	mdcj
@@ -65566,6 +65595,7 @@ GPRS	gprs
 名理	mwlg
 免礼	mwll
 猛料	mwlm
+猫粮	mwlm
 勉力	mwln
 名利	mwlt
 免了	mwlv
@@ -68185,6 +68215,7 @@ GPRS	gprs
 年货	nthj
 年华	nthj
 黏合剂	nthj
+黏合	nthj
 黏糊	nthm
 牛磺酸	nths
 牛	nti
@@ -70444,7 +70475,6 @@ GPRS	gprs
 楌	ochq
 梳	ochr
 樈	ochr
-樟	ochr
 樴	ochr
 檀	ochr
 櫅	ochr
@@ -71683,8 +71713,6 @@ GPRS	gprs
 済	odhr
 湆	odhr
 湻	odhr
-滰	odhr
-漳	odhr
 澶	odhr
 濟	odhr
 淁	odhs
@@ -71713,6 +71741,7 @@ GPRS	gprs
 㳘	odhw
 沆	odhw
 滚	odhw
+滰	odhw
 滾	odhw
 灨	odhw
 裟	odhw
@@ -72986,7 +73015,6 @@ GPRS	gprs
 荠	oehr
 萕	oehr
 萻	oehr
-蔁	oehr
 薏	oehr
 薺	oehr
 藱	oehr
@@ -74278,7 +74306,6 @@ GPRS	gprs
 職	ofhr
 酼	ofhr
 醕	ofhr
-騿	ofhr
 轆	ofhs
 韀	ofhs
 騼	ofhs
@@ -75611,8 +75638,6 @@ GPRS	gprs
 琼	oghp
 珳	oghq
 琉	oghr
-璄	oghr
-璋	oghr
 璮	oghr
 璾	oghr
 瓏	oghs
@@ -76671,7 +76696,6 @@ GPRS	gprs
 旘	ohhr
 瘖	ohhr
 癠	ohhr
-竸	ohhr
 諳	ohhr
 識	ohhr
 譠	ohhr
@@ -76679,7 +76703,6 @@ GPRS	gprs
 霽	ohhr
 靄	ohhr
 麍	ohhr
-麞	ohhr
 麡	ohhr
 廘	ohhs
 霎	ohhs
@@ -77690,6 +77713,7 @@ GPRS	gprs
 孿	ohvd
 斈	ohvd
 痾	ohvf
+驘	ohvf
 瘵	ohvg
 詘	ohvi
 諱	ohvi
@@ -77700,9 +77724,16 @@ GPRS	gprs
 詜	ohvl
 霡	ohvl
 癮	ohvm
+羸	ohvm
 讔	ohvm
+蠃	ohvo
+臝	ohvo
+贏	ohvo
+赢	ohvo
 霢	ohvq
+鸁	ohvr
 鹿	ohvs
+嬴	ohvs
 亨	ohvv
 疖	ohvv
 疗	ohvv
@@ -79469,6 +79500,7 @@ GPRS	gprs
 倅	ojhf
 停	ojhf
 傠	ojhf
+傽	ojhf
 儣	ojhf
 儲	ojhf
 兤	ojhf
@@ -79526,8 +79558,6 @@ GPRS	gprs
 偐	ojhq
 侪	ojhr
 偣	ojhr
-傹	ojhr
-傽	ojhr
 儃	ojhr
 韽	ojhr
 侫	ojhs
@@ -80315,8 +80345,8 @@ GPRS	gprs
 佭	ojws
 仰	ojwv
 脩	ojwv
-仇	ojww
 仉	ojww
+仇	ojww
 仑	ojww
 侈	ojww
 倜	ojww
@@ -82670,6 +82700,7 @@ GPRS	gprs
 粒	omhd
 焠	omhf
 熫	omhf
+糡	omhf
 熵	omhf
 爌	omhf
 粹	omhf
@@ -82706,7 +82737,6 @@ GPRS	gprs
 燷	omho
 羶	omho
 熾	omhr
-糡	omhr
 羶	omhr
 熝	omhs
 爖	omhs
@@ -83880,7 +83910,6 @@ GPRS	gprs
 懷	onho
 惊	onhp
 愔	onhr
-慞	onhr
 憻	onhr
 懠	onhr
 窨	onhr
@@ -85146,15 +85175,11 @@ GPRS	gprs
 黥	oohp
 嵃	oohq
 峕	oohr
-嶂	oohr
 巐	oohr
-幛	oohr
 幟	oohr
 瞓	oohr
-瞕	oohr
 罯	oohr
 蛴	oohr
-蟑	oohr
 蟙	oohr
 蟺	oohr
 蠐	oohr
@@ -87070,7 +87095,6 @@ GPRS	gprs
 魑	orho
 晾	orhp
 暗	orhr
-暲	orhr
 軄	orhr
 曨	orhs
 㬚	orht
@@ -87918,7 +87942,6 @@ GPRS	gprs
 嬗	osho
 婛	oshp
 辌	oshp
-嫜	oshr
 嬂	oshr
 嬗	oshr
 巰	oshr
@@ -89945,8 +89968,6 @@ GPRS	gprs
 壈	ouho
 壞	ouho
 堷	ouhr
-境	ouhr
-墇	ouhr
 韾	ouhr
 塶	ouhs
 壠	ouhs
@@ -90795,10 +90816,8 @@ GPRS	gprs
 腤	ovhr
 膱	ovhr
 膻	ovhr
-臆	ovhr
 臍	ovhr
 隌	ovhr
-障	ovhr
 隮	ovhr
 朧	ovhs
 膔	ovhs
@@ -91727,10 +91746,7 @@ GPRS	gprs
 鳣	owho
 猄	owhp
 鯨	owhp
-獍	owhr
-獐	owhr
 鯍	owhr
-鱆	owhr
 鱭	owhr
 鲚	owhr
 鳣	owhr
@@ -93837,12 +93853,8 @@ GPRS	gprs
 鍄	oyhp
 齴	oyhq
 鋶	oyhr
-鏡	oyhr
-鏱	oyhr
 鑇	oyhr
 锍	oyhr
-镜	oyhr
-镱	oyhr
 鏕	oyhs
 鑨	oyhs
 鍦	oyht
@@ -96834,10 +96846,12 @@ GPRS	gprs
 普陀	pmtv
 判	pmu
 炮群	pmub
+瓶起子	pmui
 贫穷	pmun
 判	pmuu
 盆腔	pmuv
 盆腔炎	pmuy
+瓶起子	pmuz
 鄱	pmv
 𤆵	pmv
 𤆵	pmvc
@@ -102112,6 +102126,7 @@ QQ密码	qqmm
 千克	qtkf
 缺考	qtkf
 缺口	qtki
+秋裤	qtkl
 缺课	qtkl
 气孔	qtkv
 千卡	qtky
@@ -102270,6 +102285,7 @@ QQ密码	qqmm
 氢氧根	qtyg
 情投意合	qtyh
 秋意	qtyh
+秋衣	qtyh
 氢氧化	qtyh
 秋叶	qtyi
 千余	qtyj
@@ -102957,6 +102973,7 @@ QQ密码	qqmm
 前沿阵地	qyid
 铅中毒	qyid
 钱庄	qyih
+钤章	qyih
 区域自治	qyii
 卡住	qyij
 权宜之计	qyij
@@ -103054,10 +103071,12 @@ QQ密码	qqmm
 其言也善	qyys
 区域优势	qyys
 铅印	qyyw
+钤印	qyyw
 卡在	qyza
 前沿阵地	qyzd
 铅中毒	qyzd
 钱庄	qyzh
+钤章	qyzh
 卡住	qyzj
 权宜之计	qyzj
 钦州	qyzm
@@ -108567,6 +108586,7 @@ QQ密码	qqmm
 市井之徒	sjit
 丧家之犬	sjiu
 傻子	sjiv
+舒张压	sjiy
 闪	sjj
 舍己	sjjb
 伺机	sjjc
@@ -108846,6 +108866,7 @@ QQ密码	qqmm
 丧家之犬	sjzu
 尚志	sjzu
 傻子	sjzv
+舒张压	sjzy
 手	sk
 撒	sk
 手按	skak
@@ -110228,6 +110249,7 @@ QQ密码	qqmm
 杀人罪	smrz
 烧	sms
 杀死	smsa
+燧石	smsa
 数十倍	smsb
 烧水	smsd
 善事	smsf
@@ -112314,6 +112336,7 @@ QQ密码	qqmm
 视同儿戏	stex
 簌	stf
 税费	stfb
+私房菜	stfc
 算法	stfd
 失范	stfe
 筮	stfj
@@ -113117,6 +113140,7 @@ QQ密码	qqmm
 随身听	svst
 孙氏	svsw
 收缩	svsx
+收缩压	svsy
 胜	svt
 胜	svtd
 隋唐	svth
@@ -114688,6 +114712,7 @@ QQ密码	qqmm
 填补空缺	tbkq
 填补空缺	tbku
 退款	tbku
+退卡	tbky
 屠龙	tbla
 退路	tbli
 挑拨离间	tblj
@@ -123189,6 +123214,7 @@ QQ密码	qqmm
 千克	utkf
 缺考	utkf
 缺口	utki
+秋裤	utkl
 缺课	utkl
 气孔	utkv
 千卡	utky
@@ -123345,6 +123371,7 @@ QQ密码	qqmm
 氢氧根	utyg
 情投意合	utyh
 秋意	utyh
+秋衣	utyh
 氢氧化	utyh
 秋叶	utyi
 千余	utyj
@@ -124036,6 +124063,7 @@ QQ密码	uumm
 前沿阵地	uyid
 铅中毒	uyid
 钱庄	uyih
+钤章	uyih
 区域自治	uyii
 卡住	uyij
 权宜之计	uyij
@@ -124133,9 +124161,11 @@ QQ密码	uumm
 其言也善	uyys
 区域优势	uyys
 铅印	uyyw
+钤印	uyyw
 卡在	uyza
 前沿阵地	uyzd
 钱庄	uyzh
+钤章	uyzh
 卡住	uyzj
 权宜之计	uyzj
 钦州	uyzm
@@ -125401,7 +125431,7 @@ Z	vyz
 武当	wgdj
 无关大局	wgdj
 武打	wgdk
-未对	wgdl
+未读	wgdl
 武大郎	wgdl
 武断	wgdm
 未定	wgdn
@@ -125796,6 +125826,7 @@ Z	vyz
 无意识	wgys
 无疑是	wgys
 武夷山	wgys
+无氧	wgyt
 无业	wgyu
 无垠	wgyu
 无官一身轻	wgyu
@@ -129639,6 +129670,7 @@ Z	vyz
 消渴	xdkd
 溪口	xdki
 兴都库什山	xdks
+消卡	xdky
 泻	xdl
 泄漏	xdld
 溪流	xdld
@@ -134264,6 +134296,7 @@ Z	vyz
 先于	xtyg
 香艳	xtyg
 笑颜	xtyh
+香叶	xtyi
 选优	xtyj
 先予	xtyl
 先验论	xtyl
@@ -135936,6 +135969,7 @@ Z	vyz
 原野	yayo
 友谊赛	yays
 愿与	yays
+有氧	yayt
 厌氧	yayt
 原以为	yayw
 有缘	yayx
@@ -136024,7 +136058,7 @@ Z	vyz
 鬻	ybdi
 已登记	ybdj
 引得	ybdk
-已对	ybdl
+已读	ybdl
 已定	ybdn
 引导区	ybdq
 已到	ybds
@@ -138628,6 +138662,8 @@ Z	vyz
 迂回曲折	yhuz
 育	yhv
 鄘	yhv
+赢	yhvo
+嬴	yhvs
 膺	yhvv
 鄘	yhvv
 瘾	yhvw
@@ -138830,7 +138866,6 @@ Z	vyz
 咏怀	yihn
 哜	yihr
 喑	yihr
-噫	yihr
 叶黄素	yihs
 油嘴滑舌	yihs
 咬坏	yihu
@@ -143847,7 +143882,6 @@ Z	vyz
 银行卡	yyhk
 依样画葫芦	yyhl
 镱	yyhl
-镱	yyhr
 银灰色	yyhs
 一氧化碳	yyht
 银行卡	yyhu
@@ -144701,11 +144735,11 @@ Z	vyz
 柱	zch
 柱	zchd
 梓	zchf
+樟	zchf
 棕黄	zchf
 再创辉煌	zchh
 张敞画眉	zchm
 札幌	zcho
-樟	zchr
 桩	zchu
 枳	zci
 枕在	zcia
@@ -144938,11 +144972,11 @@ Z	vyz
 涨工资	zdgz
 注	zdh
 漳河	zdhd
+漳	zdhf
 沾化	zdhj
 直捣黄龙	zdhl
 治黑	zdho
 滞后	zdhq
-漳	zdhr
 止跌回升	zdhs
 治好	zdhs
 值得回味	zdhw
@@ -145213,6 +145247,7 @@ Z	vyz
 坐而论道	zeld
 芝	zelk
 葬礼	zell
+蘸料	zelm
 藻类	zelm
 足额领取	zelq
 蒸馏水	zels
@@ -145910,10 +145945,10 @@ Z	vyz
 璋	zgh
 专横	zghc
 珠海	zghd
+璋	zghf
 战功赫赫	zghh
 专号	zghi
 专户	zghl
-璋	zghr
 专治	zgid
 专注	zgid
 知根知底	zgid
@@ -146246,10 +146281,12 @@ Z	vyz
 站得住	zhdz
 震耳	zhef
 中华儿女	zhen
+章	zhf
 症	zhf
 资费	zhfb
 章法	zhfd
 战火纷飞	zhff
+章	zhff
 资方	zhfh
 主阀	zhfj
 这番	zhfm
@@ -146291,6 +146328,7 @@ Z	vyz
 壮汉	zhhd
 麈	zhhd
 疰	zhhd
+瘴	zhhf
 座号	zhhi
 霅	zhhi
 症候	zhhj
@@ -146299,7 +146337,6 @@ Z	vyz
 壮火	zhhm
 震憾	zhhn
 章回	zhho
-瘴	zhhr
 装好	zhhs
 装糊涂	zhht
 装	zhhw
@@ -146477,9 +146514,7 @@ Z	vyz
 站起	zhqu
 装腔	zhqv
 准确性	zhqx
-章	zhr
 沾花惹草	zhrc
-章	zhrf
 主人公	zhrg
 主人	zhrj
 主任	zhrj
@@ -148919,6 +148954,9 @@ Z	vyz
 中后场	zohc
 蛀	zohd
 中韩	zohf
+蟑	zohf
+嶂	zohf
+幛	zohf
 忠魂	zohg
 中号	zohi
 账号	zohi
@@ -148934,8 +148972,6 @@ Z	vyz
 中后	zohq
 中后期	zohq
 置后	zohq
-嶂	zohr
-幛	zohr
 中和	zoht
 中后期	zohu
 赃	zohu
@@ -149533,6 +149569,7 @@ Z	vyz
 自顾自	zrgz
 追还	zrha
 照海	zrhd
+暲	zrhf
 最惠国	zrhg
 自豪感	zrhg
 自豪	zrhh
@@ -149542,7 +149579,6 @@ Z	vyz
 最恨	zrhn
 追回	zrho
 最后	zrhq
-暲	zrhr
 自毁	zrhr
 最好	zrhs
 早婚	zrhs
@@ -150003,13 +150039,13 @@ Z	vyz
 子孙后代	zshd
 斩获	zshe
 转会费	zshf
+嫜	zshf
 转化	zshj
 指手画脚	zshj
 转换	zshk
 转户	zshl
 致贺	zshn
 转圜	zsho
-嫜	zshr
 株式会社	zshs
 转好	zshs
 辙	zsht
@@ -151147,11 +151183,11 @@ Z	vyz
 阻隔	zvgv
 脏	zvh
 脏活	zvhd
+障	zvhf
 脏乎乎	zvhh
 阻吓	zvhi
 脏话	zvhl
 坠毁	zvhr
-障	zvhr
 脏	zvhu
 胀红	zvhx
 阻滞	zvid
@@ -151366,6 +151402,7 @@ Z	vyz
 詹	zwh
 杂活	zwhd
 杂货店	zwhd
+獐	zwhf
 詹	zwhi
 周会	zwhj
 杂合	zwhj
@@ -151373,7 +151410,6 @@ Z	vyz
 杂烩	zwhm
 鳣	zwho
 杂货铺	zwhp
-獐	zwhr
 鳣	zwhr
 中外合资	zwhz
 争逐	zwia
@@ -152028,11 +152064,12 @@ Z	vyz
 铡刀	zydz
 载誉而归	zyeg
 中医儿科	zyek
+镇	zyf
 针	zyf
 造谣诽谤	zyfb
 战法	zyfd
 钲	zyfd
-卓	zyff
+针	zyff
 贞丰	zyfg
 战俘	zyfj
 战斧	zyfm
@@ -152239,6 +152276,7 @@ Z	vyz
 战胜国	zysg
 紫砂壶	zysh
 止损	zysk
+战损	zysk
 卓识	zysl
 庄严肃穆	zysm
 战士们	zysm
