--- a/rime/zzdyx_mofast.dict.yaml
+++ b/rime/zzdyx_mofast.dict.yaml
@@ -2,7 +2,7 @@
 # encoding:utf-8
 ---
 name: zzdyx_mofast
-version: "20241017"
+version: "20241007"
 sort: by_weight
 use_preset_vocabulary: false
 columns:
@@ -718,8 +718,6 @@ ADP	adp
 爱思考	amsk
 爱神	amsl
 阿姆斯特朗	amsl
-爱谁谁	amss
-爱啥啥	amss
 爱书	amsx
 爱上	amsy
 阿弥陀佛	amtf
@@ -1249,7 +1247,6 @@ ADP	adp
 傲视群雄	asqx
 媪	asr
 媪	asro
-爱啥啥吧	assb
 唉声叹气	astq
 唉声叹气	astu
 昂首挺胸	astx
@@ -2546,7 +2543,6 @@ ATP	atp
 柏叶	bcyi
 标语	bcyl
 柏油路	bcyl
-板岩	bcyo
 榜眼	bcyo
 不齿于人	bcyr
 板牙	bcys
@@ -3155,7 +3151,7 @@ ATP	atp
 贲张	bfi
 百分之百	bfib
 本职	bfif
-博主	bfih
+本站	bfih
 北伐战争	bfii
 百分之九十九	bfij
 本专科	bfik
@@ -3386,7 +3382,7 @@ ATP	atp
 本周	bfz
 百分之百	bfzb
 本职	bfzf
-博主	bfzh
+本站	bfzh
 百分之九十九	bfzj
 本专科	bfzk
 本证	bfzl
@@ -4579,7 +4575,6 @@ ATP	atp
 保护法	bjhf
 保护费	bjhf
 闭环	bjhg
-不计后果	bjhg
 白金汉宫	bjhg
 傍	bjhh
 保护罩	bjhi
@@ -6383,7 +6378,6 @@ ATP	atp
 边境	bnju
 边际	bnjv
 边角	bnjw
-办结	bnjx
 边境线	bnjx
 边界线	bnjx
 办教育	bnjy
@@ -8888,7 +8882,6 @@ ATP	atp
 避重就轻	bzju
 边际	bzjv
 边角	bzjw
-办结	bzjx
 边境线	bzjx
 边界线	bzjx
 办教育	bzjy
@@ -13145,7 +13138,6 @@ ATP	atp
 采石	cmsa
 炊事班	cmsb
 采石场	cmsc
-焯水	cmsd
 差事	cmsf
 曾说过	cmsg
 粗率	cmsh
@@ -14803,7 +14795,6 @@ ATP	atp
 长远	ctyg
 称意	ctyh
 长吟	ctyi
-重阳节	ctyj
 程咬金	ctyj
 簇拥	ctyk
 乘以	ctyl
@@ -22527,7 +22518,6 @@ ATP	atp
 答数	dtsm
 笃实	dtsn
 第四	dtso
-短视频	dtsp
 短时	dtsr
 等式	dtss
 顶头上司	dtss
@@ -28123,9 +28113,8 @@ ATP	atp
 飞絮	fnxs
 发笑	fnxt
 飞行器	fnxu
-飞蟹	fnxw
-飞行物	fnxw
 发饷	fnxw
+飞行物	fnxw
 飞行员	fnxy
 发现者	fnxz
 悱	fny
@@ -38906,7 +38895,6 @@ GTP	gtp
 惠顾	hfga
 黄瓜籽	hfgi
 胡搞	hfgk
-黄岗梁	hfgl
 韩国	hfgo
 黄瓜	hfgq
 黄果树	hfgs
@@ -40264,7 +40252,6 @@ GTP	gtp
 盒式	hjss
 合山市	hjss
 合适	hjst
-含税	hjst
 黄金时期	hjsu
 货色	hjsw
 何首乌	hjsw
@@ -48152,7 +48139,6 @@ GTP	gtp
 指法	ikf
 征服者	ikf
 振奋	ikfa
-执法办	ikfb
 执法	ikfd
 衠	ikfg
 执法者	ikfi
@@ -79102,7 +79088,6 @@ GTP	gtp
 名理	mwlg
 免礼	mwll
 猛料	mwlm
-猫粮	mwlm
 勉力	mwln
 名利	mwlt
 免了	mwlv
@@ -81079,7 +81064,6 @@ NFC	nfc
 拿不准	njbz
 闹出	njc
 念成	njca
-你瞅瞅	njcc
 你才	njcf
 弄假成真	njci
 你从	njcj
@@ -81182,7 +81166,6 @@ NFC	nfc
 您可	njkf
 拿开	njkg
 你看	njkk
-你看看	njkk
 那就可能	njkn
 念	njl
 你来	njl
@@ -81225,7 +81208,6 @@ NFC	nfc
 拿枪	njqc
 拿取	njqf
 拿球	njqg
-你瞧瞧	njqq
 年纪轻轻	njqq
 拿起	njqu
 您七位	njqw
@@ -81262,7 +81244,6 @@ NFC	nfc
 拿取	njuf
 拿球	njug
 拿起	njuu
-你瞧瞧	njuu
 年纪轻轻	njuu
 您七位	njuw
 闹情绪	njux
@@ -132112,7 +132093,6 @@ sp³杂化	spsh
 随意	svyh
 随员	svyi
 孙燕姿	svyi
-收阅	svyj
 收音机	svyj
 收押	svyk
 收益率	svyl
@@ -133180,7 +133160,6 @@ sp³杂化	spsh
 时隐时现	sysx
 上思县	sysx
 叔叔	sysy
-石英砂岩	sysy
 石油输出国组织	sysz
 上调	syt
 上台阶	syt
@@ -136271,7 +136250,6 @@ sp³杂化	spsh
 托克维尔	tkwe
 痛苦万分	tkwf
 探望	tkwh
-投喂	tkwi
 提问	tkwj
 探微	tkwk
 推诿	tkwl
@@ -158024,7 +158002,6 @@ Z	vyz
 笑一个	xtyg
 香艳	xtyg
 笑颜	xtyh
-香叶	xtyi
 选优	xtyj
 先予	xtyl
 先验论	xtyl
@@ -160118,7 +160095,6 @@ Z	vyz
 已把	ybbk
 已被	ybbl
 引爆	ybbm
-已办	ybbn
 欲罢不能	ybbn
 一病不起	ybbq
 引兵	ybbr
@@ -160129,7 +160105,6 @@ Z	vyz
 已备	ybbw
 以备不时之需	ybbx
 异步	ybby
-已办	ybbz
 已	ybc
 已成	ybca
 尉迟	ybcb
@@ -173582,7 +173557,6 @@ Z	vyz
 指法	zkf
 征服者	zkf
 振奋	zkfa
-执法办	zkfb
 执法	zkfd
 衠	zkfg
 蛰伏	zkfj
